# telegram-bot-solaris

./: .env.example  .gitignore  LICENSE  README.md  pyrightconfig.json
src/: docker-compose.yml  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 1_create_users_table.py
src/app/: constants.py
src/app/bitrix/: __init__.py  client.py  exceptions.py
src/app/catalog/: __init__.py  data.py  support.py
src/app/core/: __init__.py  db.py  settings.py
src/app/services/: helper.py  lead_requests.py  reminder.py
src/app/telegram/: __init__.py  const.py  keyboards.py  router.py  states.py
src/app/telegram/handlers/: menu.py  requests.py
src/app/types/: __init__.py  catalog.py  request.py
src/app/users/: __init__.py  repository.py  user.py
