[project]
name = "bot-solaris"
version = "0.1.0"
description = "Telegram bot on aiogram with Bitrix24 lead integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18.0",
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.49",
]
